2018-01-25  Karl Berry  <karl@freefriends.org>

	* pathsearch.c: more consistent code formatting, doc fixes.
	No functional code changes.

2018-01-17  Norbert Preining  <norbert@preining.info>

	* mktexlsr (treefile): use mktemp with fallback option for
	temporary file.

2018-01-16  Karl Berry  <karl@freefriends.org>

	* kpathsea.pc.in (Cflags): remove -I${libdir} per Debian.

2018-01-14  Karl Berry  <karl@tug.org>

	* texmf.cnf: doc fixes.

2018-01-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* progname.c: Use a macro instead of a function strlen() to
	check if a string is empty or not. Report from Douglas McKenna,
	private mail 14 Jan 2018.

2018-01-05  Karl Berry  <karl@freefriends.org>

	* pathsearch.c (dir_list_search, dir_list_search_list): save the
	next element to continue the loop, in case the
	current element floats. Report from Douglas McKenna,
	tex-k mail 4 Jan 2018 10:16:18.

2017-12-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xbasename.c, xdirname.c: Remove IS_KANJI test for UNC names,
	and fix a W32 bug in xdirname.c.
	Report by Douglas McKenna:
	http://tug.org/pipermail/tex-k/2017-December/002840.html

2017-12-09  Jiang Jiang  <gzjjgod@gmail.com>

	* tex-glyph.c (try_fallback_resolutions):
	Avoid warning: taking the absolute value of unsigned type
	'unsigned int' has no effect [-Wabsolute-value]
	ref. https://github.com/jjgod/texlive/commit/4cbec4c

2017-12-08  Karl Berry  <karl@freefriends.org>

	* tex-file.c (kpathsea_init_format_return_varlist)
	<kpse_program_text_format>, <kpse_program_binary_format>:
	use DIR_SEP_STRING instead of hardwired /
	Report from Douglas McKenna, tex-k 5 Dec 2017 22:27:10.

2017-12-05  Karl Berry  <karl@freefriends.org>

	* c-minmax.h (SCHAR_MAX): decrement to the correct 127.
	Report from Douglas McKenna, tex-k 4 Dec 2017 18:26:35.

2017-11-28  Karl Berry  <karl@tug.org>

	* doc/unixtex.texi: no longer in ~ftp, etc.
	
	* doc/kpathsea.texi (Fontmap): clarify that it's the last %