@@ -1,3 +1,8 @@
+2018-01-26  Karl Berry  <karl@freefriends.org>
+
+	* tex-file.c (kpathsea_init_format_return_varlist): log a newline
+	before kpse_cnf_format, since this happens mid-search.
+
 2018-01-25  Karl Berry  <karl@freefriends.org>
 
 	* pathsearch.c: more consistent code formatting, doc fixes.
